Initial capstone commit: L2 mint + L1 anchor + gas + report

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,18 @@
-# dependencies
 node_modules/
-
-# hardhat build outputs
 artifacts/
 cache/
-
-# typechain generated
 typechain-types/
-
-# logs
-*.log
-
-# env
+coverage/
+coverage.json
 .env
 .env.*
+dist/
+out/
+*.log
+
+# Foundry
+lib/
+broadcast/
+
+# OS
+.DS_Store
