--- a/foundry.toml
+++ b/foundry.toml
@@ -6,7 +6,7 @@ solc_version = '0.8.23'
 optimizer = true
 optimizer_runs = 200
 
-# NOTE: This repo is primarily Hardhat-based.
+# NOTE: This repo is primarily Hardhat-based for V2.
 # You can still use Foundry for fuzz/invariant testing by:
 #  1) running `forge install OpenZeppelin/openzeppelin-contracts`
 #  2) mapping imports (see README)
